# rmembr

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  context-gateway-mcp-detailed-design.md  docker-compose.yml  enterprise-architecture-review.md  pyproject.toml  rMEMbr design review.md  rmembr-architecture-report.html  targeted-ai-memory-gateway-mcp-implementation-plan.md
.claude/: settings.json  settings.local.json
archive/: GITHUB_PROVIDER_v0.md  MCP_CLIENT_WIRING_v0.md  PHASE_COMPLETION_LOG.md  Phase0Alignment.md  Phase1Alignment.md  Phase3Alignment.md  Phase4Alignment.md  Phase6Alignment.md  RMEMBR.md  RMEMBR_v3.md  context-gateway-mcp-alignment-assessment-and-execution-plan.md  context-gateway-mcp-full-alignment-plan.md  (+3 more)
docs/: TUNING.md  (+2 more)
mcp-memory-local/services/index/: Dockerfile  pyproject.toml  requirements.txt
mcp-memory-local/services/index/src/: db.py  embeddings.py  ingest.py  migrations.py  search.py  server.py
mcp-memory-local/services/index/src/providers/: __init__.py  base.py  filesystem.py  github.py  registry.py  types.py
mcp-memory-local/services/index/src/retrieval/: __init__.py  engine.py  ranker.py  types.py
mcp-memory-local/services/shared/: pyproject.toml
mcp-memory-local/services/shared/src/: __init__.py  audit_log.py  auth.py  metrics.py  structured_logging.py
mcp-memory-local/services/shared/src/chunking/: __init__.py  chunker.py
mcp-memory-local/services/shared/src/ids/: __init__.py
mcp-memory-local/services/shared/src/manifest/: __init__.py  parser.py
mcp-memory-local/services/shared/src/validation/: __init__.py  validators.py
mcp-memory-local/services/standards/: Dockerfile  pyproject.toml  requirements.txt
mcp-memory-local/services/standards/src/: server.py
(+156 files in other folders)
