[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory-index"
version = "0.1.0"
description = "Index service - ingests, chunks, embeds, and queries memory packs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "mcp[server]>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
